# sync-mastodon-follows

./: LICENSE  README.md  main.py  pyproject.toml  sync-mastodon-follows.conf-example
